Updates dependencies and improves security
Updates Spring Boot to version 3.5.3.

Removes the javax.annotation-api dependency.

Configures the maven compiler plugin to use java version from property.

Updates exception handling for unrecognized properties.

Ensures task creator is set during updates.

Refactors the use of String.format to String.formatted.

Replaces javax annotations with jakarta annotations.